--- a/front-end/consultant_accept_appo.html
+++ b/front-end/consultant_accept_appo.html
@@ -33,6 +33,107 @@
         $("#example").DataTable();
       });
     </script>
+
+    <script>
+      consultantId = sessionStorage.getItem("consultant_id");
+      fetch(`http://localhost:8080/Appointments/${consultantId}/Accept`)
+        .then((response) => response.json())
+        .then((data) => {
+          const tableBody = document.querySelector("#example tbody");
+          data.forEach((element) => {
+            const row = document.createElement("tr");
+            const appointmentId = document.createElement("td");
+            const seeker_name = document.createElement("td");
+            const date = document.createElement("td");
+            const time = document.createElement("td");
+            const message = document.createElement("td");
+            const action = document.createElement("td");
+            const actionButton_revise = document.createElement("button");
+            const actionButton_reject = document.createElement("button");
+
+            appointmentId.textContent = element.appointmentId;
+
+            seekerId = element.seekerId;
+            fetch(`http://localhost:8080/Seeker/${seekerId}`)
+              .then((response1) => response1.json())
+              .then((data1) => {
+                seeker_name.textContent = data1.first_name;
+              });
+
+            date.textContent = element.date;
+            time.textContent = element.time;
+            message.textContent = element.message;
+            actionButton_revise.textContent = "Revise";
+            actionButton_reject.textContent = "Reject";
+            //actionButton.setAttribute("appointmentId", element.appointmentId);
+
+            tableBody.appendChild(row);
+            row.appendChild(appointmentId);
+            row.appendChild(seeker_name);
+            row.appendChild(date);
+            row.appendChild(time);
+            row.appendChild(message);
+            row.appendChild(action);
+            action.appendChild(actionButton_revise);
+            action.appendChild(actionButton_reject);
+
+            actionButton_revise.addEventListener("click", () => {
+              const appointmentId = element.appointmentId;
+              fetch(
+                `http://localhost:8080/UpdateAppointmentStatus/${appointmentId}/Pending`,
+                {
+                  method: "PUT",
+                  headers: {
+                    "Content-Type": "application/json",
+                  },
+                  body: JSON.stringify({
+                    status,
+                  }),
+                }
+              )
+                .then((response) => {
+                  if (response.ok) {
+                    alert("successful!");
+                  } else {
+                    alert("failed!");
+                  }
+                })
+                .catch((error) => {
+                  alert("Error: " + error);
+                });
+            });
+
+            actionButton_reject.addEventListener("click", () => {
+              const appointmentId = element.appointmentId;
+              fetch(
+                `http://localhost:8080/UpdateAppointmentStatus/${appointmentId}/Reject`,
+                {
+                  method: "PUT",
+                  headers: {
+                    "Content-Type": "application/json",
+                  },
+                  body: JSON.stringify({
+                    status,
+                  }),
+                }
+              )
+                .then((response) => {
+                  if (response.ok) {
+                    alert("successful!");
+                  } else {
+                    alert("failed!");
+                  }
+                })
+                .catch((error) => {
+                  alert("Error: " + error);
+                });
+            });
+          });
+        })
+        .catch((error) => {
+          console.error("Error fetching data:", error);
+        });
+    </script>
   </head>
   <body>
     <div id="includeHtml"></div>
@@ -54,29 +155,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>0001</td>
-              <td>Edinburgh</td>
-              <td>2011-04-25</td>
-              <td>61</td>
-              <td>dfdsfg</td>
-              <td>
-                <button
-                  type="button"
-                  class="px-3 py-2 text-xs font-medium text-center inline-flex items-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-                >
-                  <i class="fa-solid fa-arrow-rotate-left"></i>
-                  &nbsp; Revise
-                </button>
-                <button
-                  type="button"
-                  class="px-3 py-2 text-xs font-medium text-center inline-flex items-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-                >
-                  <i class="fa-solid fa-xmark"></i>
-                  &nbsp; Reject
-                </button>
-              </td>
-            </tr>
+            <tr></tr>
           </tbody>
         </table>
       </div>
