--- a/front-end/consultant_all_appo.html
+++ b/front-end/consultant_all_appo.html
@@ -47,6 +47,7 @@
             const date = document.createElement("td");
             const time = document.createElement("td");
             const message = document.createElement("td");
+            const statuss = document.createElement("td");
             const action = document.createElement("td");
             const actionButton_accept = document.createElement("button");
             const actionButton_reject = document.createElement("button");
@@ -63,6 +64,7 @@
             date.textContent = element.date;
             time.textContent = element.time;
             message.textContent = element.message;
+            statuss.textContent = element.status;
             actionButton_accept.textContent = "Accept";
             actionButton_reject.textContent = "Reject";
             //actionButton.setAttribute("appointmentId", element.appointmentId);
@@ -73,6 +75,7 @@
             row.appendChild(date);
             row.appendChild(time);
             row.appendChild(message);
+            row.appendChild(statuss);
             row.appendChild(action);
             action.appendChild(actionButton_accept);
             action.appendChild(actionButton_reject);
@@ -149,6 +152,7 @@
               <th>Date</th>
               <th>Time</th>
               <th>Message</th>
+              <th>Status</th>
               <th>Action</th>
             </tr>
           </thead>
