--- a/front-end/admin_navbar.html
+++ b/front-end/admin_navbar.html
@@ -239,21 +239,21 @@
             <ul id="dropdown-consultants" class="hidden py-2 space-y-2">
               <li>
                 <a
-                  href="#"
+                  href="admin_all_consultant.html"
                   class="flex items-center w-full p-2 text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                   >Consultants Details</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="admin_consultant_availability.html"
                   class="flex items-center w-full p-2 text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                   >Consultants Availability</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="admin_new_consultant.html"
                   class="flex items-center w-full p-2 text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                   >Add New Consultant</a
                 >
